# GenPasswordCLI

./: Cargo.toml  README.md  release  release_upx
src/: args.rs  chars.rs  main.rs
